First commited as before_1824_rev1